# framework

./: .gitmodules  Cargo.toml  readme.md  rust-toolchain
beacon_fork_choice/: Cargo.toml
beacon_fork_choice/src/: lib.rs
beacon_node/: Cargo.toml
beacon_node/src/: fake_time.rs  main.rs  node.rs  runtime_config.rs  slot_timer.rs
core/: Cargo.toml
core/src/: consts.rs  lib.rs
error_utils/: Cargo.toml
error_utils/src/: lib.rs
eth2_network/: Cargo.toml
eth2_network/src/: lib.rs
eth2_network_libp2p/: Cargo.toml
eth2_network_libp2p/src/: lib.rs
helper-functions-2/: Cargo.toml
helper-functions-2/src/: beacon_state_accessors.rs  beacon_state_mutators.rs  crypto.rs  error.rs  lib.rs  math.rs  misc.rs  predicates.rs
helper_functions/helper_functions_2/: Cargo.toml
helper_functions/helper_functions_2/src/: beacon_state_accessors.rs  beacon_state_mutators.rs  crypto.rs  error.rs  error.rs~  lib.rs  math.rs  misc.rs  predicates.rs
helper_functions/helper_functions_interface/: Cargo.toml
helper_functions/helper_functions_interface/src/: beacon_state_accessors.rs  beacon_state_mutators.rs  crypto.rs  error.rs  lib.rs  math.rs  misc.rs  predicates.rs
modules/transition_functions/src/: process_slot.rs
modules/transition_functions/tests/: process_slot.rs
scripts/: ci  interop_minimal_genesis_state.yaml.erb  lighthouse_interop.bash
transition_functions/: Cargo.toml
transition_functions/src/: lib.rs  process_slot.rs
transition_functions/src/attestations/: attestations.rs  mod.rs
transition_functions/src/blocks/: block_processing.rs  mod.rs
transition_functions/src/epochs/: mod.rs  process_epoch.rs
transition_functions/src/rewards_and_penalties/: mod.rs  rewards_and_penalties.rs
transition_functions/tests/: process_slot.rs
types/: Cargo.toml
types/src/: beacon_state.rs  chain_spec.rs  config.rs  consts.rs  domain_type.rs  lib.rs  primitives.rs  types.rs
utils/bls/src/: aggregate_public_key.rs  signature.rs
utils/merkle_proof/: Cargo.toml
utils/merkle_proof/src/: lib.rs
utils/ssz_types/src/: fixed_vector.rs
utils/tree_hash/benches/: benches.rs
utils/tree_hash/examples/: flamegraph_beacon_state.rs
