[workspace]
members = [
    'helper_functions/helper_functions_interface',
    'types',
    'transition_functions',
    'core',
]

[profile.release]
overflow-checks = true

[patch]
[patch.crates-io]
helper_functions = { path = "helper_functions/helper_functions_interface" }
tree_hash = { git = "https://github.com/sigp/lighthouse" }
tree_hash_derive = { git = "https://github.com/sigp/lighthouse" }
eth2_ssz = { git = "https://github.com/sigp/lighthouse" }
eth2_ssz_derive = { git = "https://github.com/sigp/lighthouse" }
eth2_ssz_types = { git = "https://github.com/sigp/lighthouse" }
eth2_hashing = { git = "https://github.com/sigp/lighthouse" }
