[package]
name = 'beacon_node'
version = '0.1.0'
edition = '2018'

[dependencies]
anyhow = '1.0.25'
beacon_fork_choice = { path = '../beacon_fork_choice' }
eth2_core = { path = '../core', package = 'core' }
eth2_network = { path = '../eth2_network' }
eth2_network_libp2p = { path = '../eth2_network_libp2p' }
futures = '0.1.29'
helper_functions = { path = '../helper_functions/helper_functions_2' }
log = '0.4.8'
serde = { version = '1.0', features = ['derive']}
serde_yaml = '0.8.11'
simple_logger = '1.3.0'
thiserror = '1.0.9'
tokio = '0.1.22'
typenum = '1.11.2'
types = { path = '../types' }

[dev-dependencies]
test-case = '0.3.3'
void = '1.0.2'
