[package]
name = "helper-functions-2"
version = "0.1.0"
authors = ["Tadas Vaitiekūnas, Vidmantas Bakštys, Olga Joana Šmitaitė"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
eth2_hashing = { path = "../utils/eth2_hashing"}

[dev-dependencies]
rustc-hex = "2.0.1"
