[package]
name = "transition_functions"
version = "0.1.0"
authors = ["pikaciu22x <bratcikov@gmail.com>"]
edition = "2018"

[dependencies]
bls = { path = "../utils/bls" }
integer-sqrt = "0.1"
itertools = "0.8"
eth2_ssz_types = { path = "../utils/ssz_types" }
merkle_proof = { path = "../utils/merkle_proof" }
log = "0.4"
tree_hash = "0.1"
tree_hash_derive = "0.2"
types = { path = "../types" }
rayon = "1.0"
