[package]
name = 'types'
version = '0.1.0'
authors = ['Saulius Grigaitis <saulius@dist.lt>']
edition = '2018'

[dependencies]
bls = { git = 'https://github.com/sigp/lighthouse' }
ethereum-types = '0.8'
serde = { version = '1.0', features = ['derive']}
generic-array = { version = '0.13.2', features = ['serde'] }
typenum = '1.11.2'
eth2_ssz = { git = 'https://github.com/sigp/lighthouse' }
eth2_ssz_derive = { git = 'https://github.com/sigp/lighthouse' }
eth2_ssz_types = { git = 'https://github.com/sigp/lighthouse' }
tree_hash = { git = 'https://github.com/sigp/lighthouse' }
tree_hash_derive = { git = 'https://github.com/sigp/lighthouse' }
