[package]
name = "merkle_proof"
version = "0.1.0"
authors = ["simonass <simonas.stipinas@programmatus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.8.0"
eth2_hashing = { git = "https://github.com/sigp/lighthouse" }
lazy_static = "1.4.0"
eth2_ssz_types = { git = "https://github.com/sigp/lighthouse" }
eth2_ssz = { git = "https://github.com/sigp/lighthouse" }

[lib]
name = "merkle_proof"
